--- a/_data/data.yml
+++ b/_data/data.yml
@@ -3,200 +3,163 @@
 #
 
 sidebar:
-    about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
-    education: True # set to False if you want education in main section instead of in sidebar
+  about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
+  education: True # set to False if you want education in main section instead of in sidebar
 
-    # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
-    avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+  # Profile information
+  name: Julian Cremona
+  tagline: Software Engineer
+  avatar: profile.jpg #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
-    # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
-    timezone: America/Cancun Timezone
-    citizenship:
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    xing: alandoe
-    github: sharu725
-    telegram: # add your nickname without '@' sign
-    gitlab:
-    bitbucket:
-    twitter: '@webjeda'
-    stack-overflow: # Number/Username, e.g. 123456/alandoe
-    codewars:
-    goodreads: # Number-Username, e.g. 123456-alandoe
-    pdf: http://www.africau.edu/images/default/sample.pdf
+  # Sidebar links
+  email: jncremona@gmail.com.com
+  phone: +54 9 221 3198719
+  timezone: GMT-3 Timezone
+  citizenship: Argentina
+  linkedin: jcremona
+  github: jcremona2
+  stack-overflow: 18376131/julian-cremona
 
-    languages:
-      title: Languages
-      info:
-        - idiom: English
-          level: Native
+  languages:
+    title: Languages
+    info:
+      - idiom: Spanish
+        level: Native
 
-        - idiom: French
-          level: Professional
+      - idiom: English
+        level: Professional
 
-        - idiom: Spanish
-          level: Professional
+  interests:
+    title: Interests
+    info:
+      - item: Cycling
+        link:
 
-    interests:
-      title: Interests
-      info:
-        - item: Climbing
-          link:
-
-        - item: Snowboarding
-          link:
-
-        - item: Cooking
-          link:
+      - item: Cooking
+        link:
 
 career-profile:
-    title: Career Profile
-    summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+  title: Career Profile
+  summary: |
+    Electronic Engineer specialized on IT and Software
 education:
-    title: Education
-    info:
-      - degree: MSc in Computer Science
-        university: University of London
-        time: 2011 - 2012
-        details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
-      - degree: BSc in Applied Mathematics
-        university: Bristol University
-        time: 2007 - 2011
-        details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
+  
+  title: Education
+  info:
+    - degree: Electronic Engineer
+      university: National University of La Plata
+      time: 2012 - 2019
+        
+    - degree: First Certificate in English (FCE) 
+      university: Cambridge College
+      time: 2011 -2012
+
+    - degree: Postgraduate Degree in Python Programming
+      university: National University of San Martin
+      time: 2020 - 2021
+      details: |
+        Python postgraduate Degree:
+          - Control structures and Data structures
+          - Object-oriented programming and abstract data types
+          - Python for data analysis: Input/output files. Statistical computation. Linear regression. Data visualization.
+          - Testing and debugging of programs: Design of experiments. Exception handling. Flow control.
+          - Introduction to the complexity of algorithms: Concept of complexity. search algorithms Classification algorithms.
+          - Applications of programming: Scientific applications. engineering applications.
+        
+    - degree: First Certificate in English (FCE) 
+      university: Cambridge College
+      time: 2011 -2012
+      details: |
+        Describe your study here lorem ipsum dolor sit amet, consectetuer
+        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
+        sociis natoque penatibus et magnis dis parturient montes, nascetur
+        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
+        pretium quis, sem.
+          - Bullet point
+          - Bullet point
+          
+    - degree: Diploma in Web programming Full stack with React JS
+      university: National Technological University of Buenos Aires 
+      time: 2022 - Present
+      details: |
+        - 25 weeks
+        - Full Stack Development in ReactJS and NodeJS.
+        - https://sceu.frba.utn.edu.ar/e-learning/detalle/diplomatura/1969/diplomatura-en-programacion-web-full-stack-con-react-js
+
+        
+    - degree: Developer Fundamentals Course
+      institute: skillsoft
+      time: 2021 - 2022
+      details: |
+        Among the topics covered in this Journey are key programming fundamental concepts such as Object-Oriented Programming (OOP), databases, 
+        and Software Development Life Cycle (SDLC) phases and models. In addition, the Developer Fundamentals Aspire Journey introduces concepts 
+        related to software design and development principles.
+        
 experiences:
-    title: Experiences
-    info:
-      - role: Lead Developer
-        time: 2015 - Present
-        company: Startup Hubs, San Francisco
-        details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-          enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
-          error sit voluptatem accusantium doloremque laudantium, totam rem
-          aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-          architecto beatae vitae dicta sunt explicabo.
-            - Bullet point
-            - Bullet point
-      - role: Senior Software Engineer
-        time: 2014 - 2015
-        company: Google, London
-        details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
-      - role: UI Developer
-        time: 2012 - 2014
-        company: Amazon, London
-        details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
+  title: Experiences
+
+  info:
+    - role: Software Engineer
+      time: 2021 - Present
+      company: Ciena, Argentina
+      details: |
+        General Activities:
+        Author and contribute in software design, development, validation, and documentation to deliver high quality, functionally products.
+        Interface with Systems Engineering in understanding and reviewing requirements as needed.
+        Working with regional Sales and System Engineering teams to determine the best technical solutions for customers across North America and CALA. 
+        Creating, Solutions, carrying out engineering & Planning, BoQ, Compliance Statements and Quotes as well as customer pricing schedule submissions.
+        Providing Solution Consultancy and building intelligence around company market offerings.
+        Understanding of customer requirements, RFP technical specs, convert into a cost-effective solution with constant focus on delivering
+        the value of the market leading packet-optical and Software portfolio of the company.
+                
+
+    - role: Transport Engineer
+      time: 2019 - 2021
+      company: Huawei ,Argentina
+      details: |
+        As an Engineer in the transmission department, I have been in charge of the deployment of various projects, 
+        making the project delivery implementation planning by identifying workload and arrange personal to fulfill each task. 
+        Mainly focus on the integration of new optical networks with MPLS/POTN and Optical/Electrical ASON capabilities. 
+        Deep involvement in the solution development, ensuring the project schedule by identifying possible risk and 
+        delays to fulfill the project objectives and times. Mentoring of new technical staff
+ 
+    - role: HFC and FTTH project Supervisor
+      time: 2018 - 2019
+      company: Telecentro ,Argentina
+      details: |
+        Verify, supervise and enforce the standards established by the company to ensure that the works are carried out 
+        satisfactorily and at the agreed times. (teamwork, personnel management, development, and organization of tasks)
+
 projects:
-    title: Projects
-    intro: >
-      You can list your side projects or open source libraries in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
-    assignments:
-      - title: Velocity
-        link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
+  title: Projects
+  intro: >
+    Development of a web portal to host python automation scripts online 
+  assignments:
+    - title: Web Portal
+      link: "private"
+      tagline: "Django web portal in Docker containers hosted on an EC2 AWS server"
 
-      - title: DevStudio
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
 
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
-
-publications:
-    title: Publications
-    intro: |
-      You can list your publications in this section. Lorem ipsum dolor sit
-      amet, consectetur adipiscing elit. Vestibulum et ligula in nunc
-      bibendum fringilla a eu lectus.
-    papers:
-      - title: The Art of Computer Programming
-        link: "#"
-        authors: Donald E. Knuth
-        conference: Addison-Wesley, 1968
-
-      - title: "Genetic Programming III: Darwinian Invention &amp; Problem Solving"
-        link: "#"
-        authors: Koza, J.R., Andre, D., Bennett, F.H., Keane, M.A.
-        conference: "Morgan Kaufmann Publishers Inc., San Francisco, CA, USA, 1st edn. (1999)"
-
-      - title: A syntax directed compiler for Algol 60
-        link: "#"
-        authors: Edgar T. Irons
-        conference: "Comm. ACM 4 (1961), 51–55"
 
 skills:
-    title: Skills &amp; Proficiency
+  title: Skills &amp; Proficiency
 
-    toolset:
-      - name: Python & Django
-        level: 98%
+  toolset:
+    - name: Python & Django
+      level: Advance
 
-      - name: Javascript & jQuery
-        level: 98%
+    - name: Javascript & jQuery
+      level: Basic
 
-      - name: Angular
-        level: 98%
+    - name: HTML5 & CSS
+      level: Basic
 
-      - name: HTML5 & CSS
-        level: 95%
+    - name: SQL
+      level: Basic
 
-      - name: Ruby on Rails
-        level: 85%
+    - name: Docker
+      level: Basic
 
-      - name: Sketch & Photoshop
-        level: 60%
+    - name: Sketch & Photoshop
+      level: Basic
 
-footer: >
-    Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
