--- a/_data/data.yml
+++ b/_data/data.yml
@@ -8,7 +8,7 @@ sidebar:
 
   # Profile information
   name: Julian Cremona
-  tagline: Software Engineer
+  tagline: Electronic Engineer specialized on IT and Software
   avatar: profile.jpg #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
   # Sidebar links
